Changes
=======

1.0.22 (2019-03-20)
-------------------

- Add JPEG2000 to enums.Compression so that the compression of JP2 files can be
  reported (#1654).
- Remove mock import from compat and move to test code (#1651).

1.0.21 (2019-02-28)
-------------------

- Fix for bug in implementation of the pickle protocol (#1643).

1.0.20 (2019-02-27)
-------------------

- Fix for an unchecked NULL pointer introduced in 1.0.19 that could result in
  segmentation fault on import of rasterio._env on Linux when GDAL data files
  are not available (for example, with wheels as on PyPI).

1.0.19 (2019-02-26)
-------------------

- Do not set GDAL_DATA and PROJ_LIB when data files can be found at their built
  in locations (#1631).
- Add linear_units property to CRS (#1638).
- Ensure that AWS_NO_SIGN_REQUESTS is sufficient for accessing public S3
  datasets and that import of boto3 is not required (#1637).
- An out_dtype parameter has been added to DatasetReaderBase.read, enabling
  on-the-fly casting of raster values to the desired type (#1637). This uses
  the same latent feature used to get support for "int8" data.
- Restore pickle protocol for CRS, using WKT as state (#1625).
- Support for signed 8-bit integer datasets ("int8" dtype) has been added
  (#1595).

1.0.18 (2019-02-07)
-------------------

- Fix a regression reported in #1623.

1.0.17 (2019-02-05)
-------------------

- Fix a regression in evaluation of CRS equality (#1620).

1.0.16 (2019-02-04)
-------------------

- A bug preventing GCPs from being created with new BufferedDatasetWriter
  instances (#1600) has been fixed (#1610).
- A previously unreported bug preventing BufferedDatasetWriters from being
  opened in r+ mode has been fixed.
- A regression in creating CRS objects from PROJ4 strings that include
  "+wktext" (#1609) has been fixed.
- Regressions in str representations of empty CRS objects and the handling of
  unreferenced datasets in rasterio._base have been fixed (#1616).